<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="see_match_list">매치 리스트 보기</string>
    <string name="sign_out">로그아웃 하기</string>
    <string name="write_name">이름을 입력해주세요</string>
    <string name="save">저장</string>
    <string name="dislike">DISLIKE</string>
    <string name="like">LIKE</string>
    <string name="no_match_card">매칭 카드가 없습니다.</string>
</resources>